# hetero_py

./: .env  .gitignore  Cargo.toml  calculate_memory.ipynb  calculate_meta.py  generate_graphs.ipynb  generate_metapath.ipynb  load_ogb_mag.py  main.py  note.md  pyg_test.ipynb  save_dataset copy.py  save_dataset.py  test.ipynb
.cargo/: config.toml
python/: README.md  pyproject.toml
python/src/hetro_py/: analyze_graph.py  load_graph.py  metapath.py
rust/hetero_rust/: Cargo.toml
rust/hetero_rust/src/: lib.rs  main.rs
rust/hetero_rust/src/sim/: design.rs  design_agg.rs  mecch.rs  mecch_agg.rs  mod.rs
