[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "hetro_py"
version = "0.0.1"
authors = [
  { name="Jiangqiu Shen", email="ivy22233qiu@live.com" },
]
description = "Heterogeneous computing in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "torch_geometric",
  "sentence-transformers"
]