[package]
edition = "2021"
name = "hetero_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
itertools = "0.10.5"
lazy_static = "1.4.0"
rayon = "1.7.0"
sprs = "0.11.1"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["fmt", "env-filter"]}

