[package]
edition = "2021"
name = "hetero_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
eyre = "0.6.8"
hashbrown = "0.14.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
ramu_rs = "0.1.1"
rand = "0.8.5"
rayon = "1.7.0"
sprs = "0.11.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter","fmt"] }
